# custard-calendar

./: .gitignore  ASSET_SPEC.md  LICENSE  README.md  REPO_CLEANUP_PLAN.md  REPO_CONTRACT.md  SECURITY_AND_OBSERVABILITY.md  TODO.md  WORKLOG.md  main.py  pyproject.toml  tidbyt_preview.html  ux_redesign.md
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  doctor-history.jsonl  gsd.db-shm  gsd.db-wal
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md
analytics/: accuracy.py  batch_forecast.py  data_loader.py  forecast_writer.py  predict.py
docs/: CNAME  ai-cone-qa.html  alerts.html  alias-review.html  calendar.html  compare-page.js  compare.html  cone-renderer.js  flavor-audit.html  forecast-map.html  fun.html  group.html  index.html  manifest.json  map.html  multi.html  planner-data.js  planner-domain.js  planner-shared.js  planner-ui.js  privacy.html  quiz.html  radar.html  scoop.html  shared-nav.js  siri.html  stores.json  style.css  sw.js  test-api-surface.html  today-page.js  todays-drive.js  updates.html  widget.html
scripts/: analytics_report.py  backfill_national.py  backfill_snapshots.py  check_backfill_coverage.py  check_forecast_coverage.py  check_repo_structure.py  check_status_docs.py  evaluate_forecasts.py  feedback_queue.py  generate-hero-cones.mjs  generate_intelligence_metrics.py  upload_forecasts.py  verify-cone-assets.mjs
src/: flavor_service.py
tests/: test_design_tokens.py  (+8 more)
(+439 files in other folders)
